# ml-power-nowcast

./: .env.bucket  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  EGO.md  MODEL_RETRAINING_SUMMARY.md  Makefile  PRODUCTION_RESULTS_SUMMARY.md  PROJECT-POLICIES.md  README.md  SECTION_14_PORTABILITY_RESULTS.md  VERSIONING.md  existing_weather.parquet  fly.toml  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  system_power_data.parquet  temp_power.parquet  updated_weather.parquet
.claude/: 0-CRITICAL-POLICIES.md  PRE-COMMIT-CHECKLIST.md  settings.json
.claude/commands/: before-code.md  checkpoint.md  compliance-check.md  mode-api_documenter.md  mode-editor.md  mode-python_developer.md  mode-reviewer.md  mode-writer.md  periodic-refresh.md  recall-policies.md  refresh-policies.md  security-review.md  validate.md
.claude/system-prompt-fragments/: egokit-policies.txt
.egokit/policy-registry/: charter.yaml
config/: production.json
dashboard/: .env.local  Dockerfile  package-lock.json  package.json  tailwind.config.ts
dashboard/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  fallback-build-manifest.json  postcss.js  prerender-manifest.json  required-server-files.json  trace
data/: caiso_system_only.parquet  corrected_caiso_system_load.parquet  fresh_power_today.parquet  fresh_weather_today.parquet  weather_all_zones_sample.parquet
data/dashboard/: historical_performance.json  model_metrics.json
data/demo_results/: predictions_summary_20250829_154553.csv  predictions_summary_20250829_154617.csv  realtime_forecast_demo_20250829_154553.json  realtime_forecast_demo_20250829_154617.json
data/features/: README.md  features_sample.parquet  features_sample_info.csv
data/incremental/: caiso_recent.parquet
data/raw/: power_sample.parquet  weather_sample.parquet
data/test_features/: forecast_feature_list_20250829_153125.txt  forecast_features_test_20250829_153125.parquet
data/test_forecasts/: nws_np15_forecast_test_20250829_152317.parquet
data/trained_models/: baseline_xgboost_20250829_154035.joblib  lightgbm_model_20250830_020031.joblib  lightgbm_model_20250830_080033.joblib  lightgbm_model_20250830_093053.joblib  lightgbm_model_20250830_103005.joblib  lightgbm_model_20250830_103159.joblib  lightgbm_model_20250830_111753.joblib  lightgbm_model_20250830_121744.joblib  lightgbm_model_20250830_123511.joblib  lightgbm_model_20250830_124122.joblib  lightgbm_model_20250830_124236.joblib  lightgbm_model_20250830_125555.joblib  (+9 more)
docs/: README.md  ai-agent-controls.md  claude-slash-commands.md  core-concepts.md  getting-started.md  model-training-operations.md  operations-deployment.md  slash-command-standards.md  system-overview.md  technical-implementation.md
examples/: README.md
examples/ai-modes/: README.md
memories/: memories.md
packer/: README.md
planning/: README.md  neural_network_models_implementation_plan.md  power-nowcasting-implementation-plan.md  power_data_ingestion_full.md  scaffold_power_nowcast.sh  weather_forecast_integration.md
scripts/: README_caiso_collection.md  __init__.py  automated_ml_pipeline.py  automated_pipeline.py  calibrate_historical_predictions.py  check_continuous_training_status.py  collect_caiso_historical.py  collect_current_weather.py  collect_weather_forecasts.py  com.caiso.current_weather.plist  com.caiso.forecasts.plist  com.caiso.incremental.plist  com.caiso.ml_pipeline.plist  com.caiso.quality_monitor.plist  demo_realtime_forecasting.py  example_s3_prepopulation.sh  fix_historical_chart_data.py  fix_historical_smooth_permanent.py  fix_zone_mapping.py  incremental_collection_macos.py  merge_datasets.py  prepopulate_s3_data.py  quality_monitor.py  regenerate_clean_historical_data.py  retrain_aggressive_model.py  retrain_production_model.py  ruff-audit.sh  run_tests.py  serve_model.sh  setup_cron.sh  setup_forecast_collection.sh  setup_incremental_collection.sh  setup_ml_pipeline.sh  test_enhanced_xgboost.py  test_forecast_features.py  test_improved_model.py  test_nws_forecast_collection.py  test_unified_features.py  train_production_model.py  verify_data_quality.py  (+1 more)
src/: __init__.py
terraform/: README.md
tests/: __init__.py  test_cli.py  test_compiler.py  test_integration.py  test_models.py  test_multi_agent.py  test_registry.py
(+642 files in other folders)
